--- a/apps/haproxy/haproxy.cfg
+++ b/apps/haproxy/haproxy.cfg
@@ -10,4 +10,4 @@ frontend allFrontend
     default_backend obsidian
 
 backend obsidian
-    server http 127.0.0.1:3000
+    server http host.docker.internal:3000
