--- a/apps/haproxy/docker-compose.yml
+++ b/apps/haproxy/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     image: haproxy:latest
     volumes:
         - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+    sysctl:
+      - net.ipv4.ip_unprivileged_port_start=0
     ports:
         - "80:80"
     network_mode: "bridge"
