--- a/apps/haproxy/docker-compose.yml
+++ b/apps/haproxy/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: haproxy:latest
     volumes:
         - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
-    sysctl:
+    sysctls:
       - net.ipv4.ip_unprivileged_port_start=0
     ports:
         - "80:80"
