--- a/apps/haproxy/docker-compose.yml
+++ b/apps/haproxy/docker-compose.yml
@@ -1,6 +1,4 @@
 services:
   haproxy:
-    image: haproxy:latest
-    volumes:
-        - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+    build: .
     network_mode: host
