--- a/apps/haproxy/docker-compose.yml
+++ b/apps/haproxy/docker-compose.yml
@@ -1,9 +1,4 @@
 services:
   haproxy:
-    networks:
-      - proxy
     build: .
-networks:
-  proxy:
-    name: proxy
-    external: true
+    network_mode: host
