--- a/apps/obsidian/docker-compose.yml
+++ b/apps/obsidian/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=Etc/UTC
+    volumes:
+      - /path/to/config:/config
     ports:
       - 3000:3000
     devices:
