--- a/apps/haproxy/haproxy.cfg
+++ b/apps/haproxy/haproxy.cfg
@@ -6,8 +6,8 @@ defaults
     timeout http-request 10s
 
 frontend allFrontend
-    bind *:800
+    bind *:80
     default_backend obsidian
 
 backend obsidian
-    server server1 127.0.0.1:3000
+    server server1 obsidian:3000
