--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -19,13 +19,13 @@ services:
     restart: unless-stopped
 
   haproxy:
-    networks:
-      - proxy
     image: haproxy:latest
     ports:
       - 80:80
     volumes:
-        - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+      - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+    # networks:
+    #   - proxy
 
 networks:
   proxy:
