--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -24,8 +24,8 @@ services:
       - 80:80
     volumes:
       - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
-    # networks:
-    #   - proxy
+    networks:
+      - proxy
 
 networks:
   proxy:
