--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+      - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
     networks:
       - proxy
 
