Obsidian data dir

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - TZ=Etc/UTC
     volumes:
       - /path/to/config:/config
+      - ../obsidian/data:/home/data
     ports:
       - 3000:3000
     devices:
