--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=Etc/UTC
+      - FM_HOME=/config/data
     volumes:
       - /var/obsidian:/config
     ports:
