--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -7,7 +7,15 @@ defaults
 
 frontend allFrontend
     bind *:80
+
+    acl tools hdr_beg(host) -i tools
+    use_backend tools if tools
+
+
     default_backend obsidian
 
 backend obsidian
     server server1 obsidian:3000
+
+backend tools
+    server server1 it-tools:8080
