--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -8,8 +8,8 @@ defaults
 frontend allFrontend
     bind *:80
 
-    acl tools hdr_beg(host) -i tools
-    use_backend tools if tools
+    acl use_tools hdr_beg(host) -i tools
+    use_backend tools if use_tools
 
 
     default_backend obsidian
