--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -18,4 +18,4 @@ backend obsidian
     server server1 obsidian:3000
 
 backend tools
-    server server1 it-tools:8080
+    server server1 tools:8080
