--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -7,15 +7,10 @@ defaults
 
 frontend allFrontend
     bind *:80
-
-    acl use_tools hdr_beg(host) -i tools
-    use_backend tools if use_tools
-
-
     default_backend obsidian
 
 backend obsidian
-    server server1 obsidian:3000
+    server server1 tools:8080
 
 backend tools
     server server1 tools:8080
