--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -7,10 +7,10 @@ defaults
 
 frontend allFrontend
     bind *:80
-    default_backend obsidian
-
-backend obsidian
-    server server1 tools:3001
+    default_backend tools
 
 backend tools
-    server server1 tools:8080
+    server server1 tools:3001
+
+backend obsidian
+    server server1 obsidian:3000
