--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -1,5 +1,5 @@
 defaults
-    mode http
+    mode tcp
     timeout client 10s
     timeout connect 5s
     timeout server 10s 
@@ -11,6 +11,3 @@ frontend allFrontend
 
 backend tools
     server server1 tools:3001
-
-backend obsidian
-    server server1 obsidian:3000
