--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -5,6 +5,9 @@ defaults
     timeout server 10s 
     timeout http-request 10s
 
+resolvers docker
+        parse-resolv-conf
+
 frontend allFrontend
     bind *:80
     default_backend tools
