--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -4,6 +4,7 @@ defaults
     timeout connect 5s
     timeout server 10s 
     timeout http-request 10s
+    default-server init-addr last,libc,none
 
 resolvers docker
     parse-resolv-conf
