--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,8 @@ services:
       - NET_ADMIN
     image: haproxy:latest
     network_mode: host
+    sysctls:
+      - net.ipv4.ip_unprivileged_port_start=0
     volumes:
       - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
 
