--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -14,4 +14,4 @@ frontend allFrontend
     default_backend tools
 
 backend tools
-    server server1 simple:8000
+    server server1 localhost:3001
